--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
+  "homepage": "https://wallacemartinsti.github.io/my-portfolio",
   "private": true,
   "dependencies": {
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-icons": "^4.4.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
